removed useless div, corrected " in style before =

--- a/index.html
+++ b/index.html
@@ -59,11 +59,9 @@
       <a href="#contact-us-anchor" class="touch-button">Get In Touch.</a>
     </div>
     </div>
-    <div>
       <div class="slick-slider">
-        <div><img class"=slider" src="images/vector illustration.png"></div>
+        <div><img class="slider" src="images/vector illustration.png"></div>
       </div>
-    </div>
   </div>
   <div class="portfolio">
     <div class="portfolio-text">
