--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
     </nav>
 
   </div>
-  <a name="title"></a>
   <div class="title" >
     <div class="title-text">
     <div class="title-text-1"> THE SPIRIT OF DIGITAL AGENCY.</div>
@@ -87,8 +86,8 @@
       See more of these
     </div>
   </div>
-  <a name="contact-us-anchor"></a>
   <div class="get-in-touch">
+    <a href="contact-us-anchor"></a>
     <div class="get-in-touch-text-1">
       CONTACT US
     </div>
