--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <nav class="navbar">
         <a class="nav-logo"><img id="logo" src="images/logo.png"></a>
         <nav id="nav-menu">
-          <i class="fa fa-bars"></i>
             <li class="nav-item">
                 <a href="" class="nav-link">Home.</a>
             </li>
@@ -51,6 +50,7 @@
 
   </div>
   <div class="title" >
+    <a href="title-anchor"></a>
     <div class="title-text">
     <div class="title-text-1"> THE SPIRIT OF DIGITAL AGENCY.</div>
     <div class="title-text-2">Vestibulum ac diam sit amet quam vehicula elementum amet est on dui. Nulla porttitor accumsan tincidunt.</div>
@@ -106,7 +106,6 @@
     </button>
   </div>
   <footer>
-  <div class="footer">
     <div class="footer-text-1">
       DOOB
     </div>
@@ -118,7 +117,7 @@
           <a href="" class="nav-link footer-text-4">Home.</a>
       </li>
       <li>
-          <a href="#title" class="nav-link footer-text-4">About us.</a>
+          <a href="#title-anchor" class="nav-link footer-text-4">About us.</a>
       </li>
       <li>
           <a href="#" class="nav-link footer-text-4">Portfolio.</a>
@@ -137,7 +136,6 @@
       <img class="s-ico" src="images/dribble.png">
       <img class="s-ico" src="images/twitter.png">
       <img class="s-ico" src="images/fb.png">
-    </div>
   </div>
 </footer>
 
